Fix getSuggestions deprecations in FAWE code